# IMPACT

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  index.html  pyproject.toml
config/deploy/: mujoco_side_frontcamera.yaml  side_frontcamera.yaml
config/postprocess/: MJ_side_front.yaml
impact/: __init__.py  train.py
impact/config/: default.yaml
impact/config/dataloader/: data_loader.yaml
impact/config/dataset/: dataset.yaml
impact/config/logging/: logging.yaml
impact/config/normalizer/: normalizer.yaml
impact/dataset/: __init__.py  base_dataset.py  franka_pick_dataset.py
impact/deploy/: __init__.py  policy_loader.py  ros_api.py
impact/model/diffusion/: conditional_unet1d.py  conv1d_components.py  mask_generator.py
impact/model/vision/: crop_randomizer.py  multi_image_obs_encoder.py  plain_encoder.py
impact/policy/: base_image_policy.py  diffusion_unet_image_policy.py
impact/runner/: __init__.py  base_image_runner.py  offline_runner.py
impact/utils/: json_logger.py  normalizers.py  replay_buffer.py  sampler.py
impact/workspace/: real_world_workspace.py
ros_ws/: vendor.repos
ros_ws/src/cameras/: package.xml  setup.py
ros_ws/src/cameras/cameras/: realsense.py
ros_ws/src/joycon_teleop/: package.xml  setup.cfg  setup.py
ros_ws/src/joycon_teleop/joycon_teleop/: joycon_check.py  joycon_dual_teleop_node.py  joycon_single_teleop_node.py  legacy_joycon_teleop_node.py
ros_ws/src/joycon_teleop/joycon_teleop/joycon_lib/: __init__.py  constants.py  device.py  gyro.py  joycon.py  wrappers.py
ros_ws/src/joycon_teleop/launch/: joycon_teleop.launch.py
ros_ws/src/joycon_teleop/rviz/: joycon_teleop.rviz
ros_ws/src/mujoco_sim/: CMakeLists.txt  mujoco_sim.xml  package.xml
ros_ws/src/mujoco_sim/include/mujoco_sim/: mujoco_rendering.h  mujoco_simulator.h  system_interface.h
ros_ws/src/mujoco_sim/src/: mujoco_rendering.cpp  mujoco_simulator.cpp  system_interface.cpp
ros_ws/src/predictive_controller/: CMakeLists.txt  package.xml  predictive_controller.xml
ros_ws/src/predictive_controller/include/predictive_controller/: cartesian_impedance_controller.hpp  cerebellum_predictive_controller.hpp  noop_effort_controller.hpp  pose_broadcaster.hpp  residual_observer_controller.hpp  visibility_control.h
ros_ws/src/predictive_controller/include/predictive_controller/utils/: filters.hpp  friction_model.hpp  joint_limits.hpp  pseudo_inverse.hpp  torque_rate_saturation.hpp
ros_ws/src/predictive_controller/resource/: predictive_controller
ros_ws/src/predictive_controller/src/: cartesian_impedance_controller.cpp  cartesian_impedance_controller.yaml  cerebellum_predictive_controller.cpp  cerebellum_predictive_controller.yaml  noop_effort_controller.cpp  pose_broadcaster.cpp  residual_observer_controller.cpp  residual_observer_controller.yaml
ros_ws/src/sim_bringup/: package.xml  setup.py
ros_ws/src/sim_bringup/assets/: fr3_menagerie_torque.xml  fr3_menagerie_torque_gripper.xml  scene_hammer_basket.xml  scene_pick_place.xml
ros_ws/src/sim_bringup/assets/objects/Cole_Hardware_Hammer_Black/: model.xml
ros_ws/src/sim_bringup/assets/urdf/: fr3_mujoco.urdf.xacro  franka_arm_mujoco.ros2_control.xacro  franka_robot_mujoco.xacro
ros_ws/src/sim_bringup/config/: mujoco_overrides.yaml  randomization.yaml  sim_dataset_recorder.yaml
ros_ws/src/sim_bringup/launch/: franka_mujoco.launch.py  franka_mujoco_MP.launch.py  franka_mujoco_deployment.launch.py
ros_ws/src/sim_bringup/sim_bringup/: dataset_recorder.py  fake_franka_gripper.py  pick_place_demo.py  policy_deployment.py  video_recorder.py
ros_ws/src/system_bringup/: package.xml  setup.py
ros_ws/src/system_bringup/config/: franka.config.yaml  gripper.yaml  realsense_cameras.yaml  teleoperation.yaml
ros_ws/src/system_bringup/config/controller/: crsip_controllers.yaml  mujoco_overrides.yaml  predictive_controllers.yaml
ros_ws/src/system_bringup/launch/: franka.launch.py  franka_deployment.launch.py  franka_teleopration.launch.py  realsense_viewer.launch.py
ros_ws/src/system_bringup/resource/: system_bringup
ros_ws/src/system_bringup/scripts/: home_arm
ros_ws/src/system_bringup/system_bringup/: __init__.py  dataset_recorder.py  franka_gripper_bridge.py  launch_utils.py  pose_error_broadcaster.py  set_collision_behavior.py
scripts/: check_datasets.py  joycon_connect.sh  joycon_pair.expect  mujoco_viewer.py  run_mass_sweep.sh  summarize_mass_sweep.py  train.slurm
scripts/data/: dump_zarr_videos.py
scripts/dataset_viewer/: config.json  index.html  viewer_server.py
scripts/postprocess/: align_timesteps.py  data_transforms.py  export_trajectories.py  utils.py
static/css/: index.css
