[project]
name = "impact"
version = "0.1.0"
description = "Training, simulation, and deployment code for IMPACT robotic manipulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.36.0",
    "dill>=0.4.0",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "numba>=0.63.1",
    "numpy>=1.26,<2",
    "opencv-python>=4.10,<4.11",
    "pandas>=2.3.3",
    "setuptools<80",
    "tensorboard>=2.20.0",
    "threadpoolctl>=3.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "zarr>=2.17,<3",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
ignore = ["E731"]
